# chess-analysis-engine

./: .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  README.md  _config.yml  index.html  mkdocs.yml
.github/ISSUE_TEMPLATE/: development-plan-template.md
.github/workflows/: ab-test-pre.yml  ab-test.yml  board-consistency.yml  checkmate.yml  ci-cmake.yml  ci-cmake.yml.yml  ci.yml  cmake-single-platform.yml  format-check.yml  functional_change.yml  perft.yml  pr-small-match.yml  pr-test.yml  pre-release.yml  push-test.yml  regression.yml  release.yml  run-tests.yml  sanitizers.yml
architecture/Attack/: index.html
architecture/BitMove/: index.html
architecture/Board/: index.html
architecture/architecture/: index.html
architecture/architecture_template/: index.html
bench/: Mate_In_Two.txt  mateInOne.txt  openings.pgn  openings_filtered.pgn
bench/src/: Bench.cpp  Bench.h  Mate_In_One.cpp  Mate_In_One.h  Mate_In_Two.cpp  Mate_In_Two.h  Progress_Bar.cpp  Progress_Bar.h
docs/: 00-project-overview.md  00-project-structure.md  01-engine-improvement.md  architecture.md  engine-improvement.md  index.md  introduce_tempelate.md  project-overview.md  self-code-review.md
docs/architecture/: Attack.md  BitMove.md  Board.md  architecture.md  architecture_template.md
docs/asserts/css/: style.scss
docs/assets/css/: style.css  style.scss
docs/code-reviews/: 2026-02-06_Attack_CR.md  2026-02-06_Board_CR.md  2026-02-08_Check&Piece_CR.md  2026-02-08_Check_CR.md  self-code-review.md
docs/engine/code-reviews/: 2026-02-10_Board_CR.md  2026-02-10_Generates_CR.md
docs/engine/optimization/: 20260503_summary.md
docs/optimization/: engine-improvement.md
docs/tutorials/: engine_introduce.md
docs/tutorials/gitbub_usage/: engine_introduce.md
docs/user-guide/testing/: Opening.md  Perft.md  mate-in-one-test.md
docs/web_codes/javascripts/: mermaid_init.js
docs/web_codes/stylesheets/: extra.css
engine/: .gitignore  CMakeLists.txt
engine/.cph/: .F_Array_Stabilization_GCD_version.cpp_57501c26f9f409bc83f7b9b5821372b1.prob
engine/code-reviews/: index.html
engine/code-reviews/2026-02-06_Attack_CR/: index.html
engine/code-reviews/2026-02-06_Board_CR/: index.html
engine/code-reviews/2026-02-08_Check&Piece_CR/: index.html
engine/code-reviews/2026-02-10_Board_CR/: index.html
engine/code-reviews/2026-02-10_Generates_CR/: index.html
engine/code-reviews/self-code-review/: index.html
engine/include/: Engine.h  Structure_IO.h  Time_Management.h  Type.h  debug.h
engine/include/UCI/: UCI.h  UCI_Move_Parcer.h
engine/include/board/: Attack.h  AttackMap.h  Board.h  Check.h  Generate_Move.h  Generate_Position.h  Move.h  Piece.h
engine/include/command/: UCI.h  UCI_Move_Parcer.h
engine/include/command/CLI/: CLI.h
engine/include/debug/: log.h  perft.h  validation.h
engine/include/evaluate/: Castle_Rights.h  Control_Center.h  Evaluate.h  Evaluate_Weight.h  King_Safety.h  Material_Point.h  Mobility.h  Move_Order.h  Negamax.h  PST.h  Pawn_Structure.h  SEE.h  TT.h  Tempo.h
engine/include/fen/: FEN_Parser.h
engine/include/move/: Generate_Move.h  Generate_Position.h  Generate_Variables.h  Make_BitMove.h  Make_Move.h  Move.h  Move_Direction.h  Move_Order.h
engine/include/pgn/: Pgn_Parser.h  Pgn_Transformer.h  San_Parser.h  Valid_Piece.h
engine/include/search/: Board_Consistency.h  History_Heuristic.h  Killer_Move.h  Negamax.h  PV_Table.h  Perft.h  Search.h  Search_Old.h  Search_Variables.h  TT.h  Zobrist.h
engine/optimization/20260503_summary/: index.html
engine/optimization/engine-improvement/: index.html
engine/src/: Engine.cpp  Time_Management.cpp  Web_Bindings.cpp  debug.cpp  main.cpp
engine/src/UCI/: UCI.cpp  UCI_Move_Parser.cpp
engine/src/board/: Attack.cpp  AttackMap.cpp  Board.cpp  Check.cpp  Generate_Move.cpp  Generate_Position.cpp  Move.cpp  Piece.cpp
engine/src/command/: UCI.cpp  UCI_Move_Parser.cpp
engine/src/command/CLI/: CLI.cpp
engine/src/debug/: Perft.cpp  perft.cpp
engine/src/evaluate/: Castle_Rights.cpp  Control_Center.cpp  Evaluate.cpp  King_Safety.cpp  Material_Point.cpp  Mobility.cpp  Move_Order.cpp  Negamax.cpp  PST.cpp  Pawn_Structure.cpp  Pawn_Stucture.cpp  SEE.cpp  Tempo.cpp
engine/src/fen/: FEN_Parser.cpp
engine/src/move/: Generate_Move.cpp  Generate_Position.cpp  Make_BitMove.cpp  Make_Bit_Move.cpp  Make_Move.cpp  Move.cpp  Move_Order.cpp
engine/src/pgn/: Pgn_Parser.cpp  Pgn_Transformer.cpp  Valid_Piece.cpp
engine/src/search/: Killer_Move.cpp  Negamax.cpp  Search.cpp  Search_Old.cpp  TT.cpp  Zobrist.cpp
introduce_tempelate/: index.html
project-overview/: index.html
script/: Compile_WASM.txt  Format_All_Files.bat  Run_Engine.bat  Run_Tests.bat  preview_locally.bat
search/: search_index.json
tests/: Bit_Move_Correctness.cpp  Bit_Move_Correctness.h  Board_Consistency.cpp  Board_Consistency_Test.h  Perft.cpp  Perft_Test.h  Perft_Test.py  Tests.cpp  board_consistency.py  checkmate.py  cmd_output.py  regression_test.py  uci_engine.py
tests/bench/: Mate_In_One.txt
tests/bench/src/: Mate_In_One.cpp  Mate_In_Two.cpp  Progress_Bar.h
tests/board_consistency/: Board_Consistency.cpp  Board_Consistency.txt  end_game_bc.txt  middle_game_bc.txt  openings_bc.txt  stress_bc.txt
tests/checkmate/: Mate_In_One.cpp  Mate_In_One.txt  Mate_In_Two.cpp
tests/perft/: Perft_Tests.txt
tests/regression/: regression_test.py  regressions.txt
tutorials/alpha_beta_search/: index.html
tutorials/engine_introduce/: index.html
tutorials/gitbub_usage/: index.html
tutorials/gitbub_usage/engine_introduce/: index.html
tutorials/gitbub_usage/introduce_tempelate/: index.html
user-guide/testing/Opening/: index.html
user-guide/testing/Perft/: index.html
user-guide/testing/mate-in-one-test/: index.html
web_codes/javascripts/: mermaid_init.js
web_codes/stylesheets/: extra.css
