    cmake_minimum_required(VERSION 3.16)
    project(Hynobius)

    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

    # 告訴 CMake include 目錄在哪
    include_directories(engine/include)

    # add_definitions(-D_GLIBCXX_DEBUG)
    # add_definitions(-DENGINE_DEBUG)

    # 目標檔案
    add_library(engine-core
        engine/src/board/Piece.cpp
        engine/src/board/Board.cpp
        engine/src/board/Attack.cpp
        engine/src/board/Check.cpp

        engine/src/debug/Perft.cpp

        engine/src/move/Move.cpp
        engine/src/move/Move_Order.cpp
        engine/src/move/Generate_Move.cpp
        engine/src/move/Make_Move.cpp
        engine/src/move/Make_BitMove.cpp

        engine/src/evaluate/Material_Point.cpp
        engine/src/evaluate/Evaluate.cpp
        engine/src/evaluate/Control_Center.cpp
        engine/src/evaluate/Tempo.cpp
        engine/src/evaluate/PST.cpp
        engine/src/evaluate/King_Safety.cpp
        engine/src/evaluate/SEE.cpp
        engine/src/evaluate/Mobility.cpp
        engine/src/evaluate/Castle_Rights.cpp
        engine/src/evaluate/Pawn_Structure.cpp

        engine/src/pgn/Pgn_Parser.cpp
        engine/src/pgn/Pgn_Transformer.cpp

        engine/src/search/TT.cpp
        engine/src/search/Zobrist.cpp
        engine/src/search/Search.cpp

        engine/src/fen/FEN_Parser.cpp

        engine/src/command/UCI.cpp
        engine/src/command/UCI_Move_Parser.cpp
        engine/src/command/CLI/CLI.cpp

        engine/src/Engine.cpp
        engine/src/Time_Management.cpp
    )

    # 正式引擎
    add_executable(Hynobius engine/src/main.cpp)
    target_link_libraries(Hynobius PUBLIC engine-core)
    set_target_properties(Hynobius PROPERTIES WIN32_EXECUTABLE OFF)

    # test mate

    enable_testing()

    # test board consistency
    add_executable(test-board-consistency tests/board_consistency/Board_Consistency.cpp)
    target_link_libraries(test-board-consistency PRIVATE engine-core)
    set_target_properties(test-board-consistency PROPERTIES WIN32_EXECUTABLE OFF)

    add_test(NAME BoardConsistencyTest COMMAND test-board-consistency)

    add_executable(test-bitmove tests/Bit_Move_Correctness.cpp)
    target_link_libraries(test-bitmove PRIVATE engine-core)
    set_target_properties(test-bitmove PROPERTIES WIN32_EXECUTABLE OFF)

    add_test(NAME BitMoveTest COMMAND test-bitmove)

    # link must-have dlls
    if (MINGW)
        target_link_options(Hynobius PRIVATE -static -static-libgcc -static-libstdc++)
    endif()